--- a/consumer/README.adoc
+++ b/consumer/README.adoc
@@ -1,8 +1,6 @@
 = Processos Necessários
 
-* Alterando o ambiente para o docker: 
-`eval $(minikube docker-env)`
-* Build: 
-`docker build -t publisher:0.0.1 .`
-* No deployment:
-`imagePullPolicy: Never`
+* Alterando o ambiente para o docker: `eval $(minikube docker-env)`
+* Build: `docker build -t consumer:0.0.1 .`
+* No deployment: `imagePullPolicy: Never`
+* Abrindo IP externo: `minikube tunnel`
